--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.6",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@reduxjs/toolkit": "^1.9.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,5 +28,8 @@
     "eslint-config-next": "14.1.0",
     "json-server": "1.0.0-alpha.22",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.18.2"
   }
 }
