--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
